--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,8 @@ test:
   pre:
     - pyenv global 3.5.0
     - python --version
-    - python2 --version
+    #When using pyenv global 3.5.0 python2 doesn't work any longer
+    #- python2 --version
     - python3 --version
 
   override:
