--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 # Circle.yml for testing python3 with Ubuntu 14.04
 machine:
-  python:
-    version: 3.5.1
+  #python:
+  #  version: 3.5.1
 
 test:
   pre:
