--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,8 @@ test:
     #- pyenv global 3.5.1
     - python --version
     - python2 --version
-    - python3 --version
+    #- python3 --version
+    - /usr/bin/python3 --version
 
   override:
-    - python3 -c 'print("OK")'
+    - /usr/bin/python3 -c 'print("OK")'
