Fix typo's and use explicit paths

--- a/circle.yml
+++ b/circle.yml
@@ -1,25 +1,29 @@
 # Circle.yml for testing python3 with Ubuntu 14.04
 machine:
   environment:
+    SRC_PREFIX_DIR: ${HOME}/src
     INSTALL_PREFIX_DIR: ${HOME}/opt
     PATH: ${INSTALL_PREFIX_DIR}/py-351/bin:${PATH}
 
 test:
   pre:
     # Install python3 from sources
+    - mkdir -p ${SRC_PREFIX_DIR}
+    - mkdir -p ${INSTALL_PREFIX_DIR}/py-351
     - wget https://www.python.org/ftp/python/3.5.1/Python-3.5.1.tgz
-    - tar xf Python-3.5.1.tgz
-    - mkdir ${INSTALL_PREFIX_DIR}/py-351
-    - cd Phthon-3.5.1/ ; ./configure --prefix=${INSTALL_PREFIX_DIR}/py-351
-    - cd Phthon-3.5.1/ ; make
-    - cd Phthon-3.5.1/ ; make test
-    - cd Phthon-3.5.1/ ; make install
+    - tar -xf Python-3.5.1.tgz -C ${SRC_PREFIX_DIR}
+    - cd ${SRC_PREFIX_DIR}/Python-3.5.1/ ; ./configure --prefix=${INSTALL_PREFIX_DIR}/py-351
+    - cd ${SRC_PREFIX_DIR}/Python-3.5.1/ ; make
+    #- cd ${SRC_PREFIX_DIR}/Python-3.5.1/ ; make test
+    - cd ${SRC_PREFIX_DIR}/Python-3.5.1/ ; make install
 
     #- pyenv global 3.5.1
+    - which python
     - python --version
+    - which python2
     - python2 --version
-    #- python3 --version
-    - /usr/bin/python3 --version
+    - which python3
+    - python3 --version
 
   override:
-    - /usr/bin/python3 -c 'print("OK")'
+    - python3 -c 'print("OK")'
