Try convert to a bash script.

--- a/circle.yml
+++ b/circle.yml
@@ -8,14 +8,7 @@ machine:
 test:
   pre:
     # Install python3 from sources
-    - mkdir -p ${SRC_PREFIX_DIR}
-    - mkdir -p ${INSTALL_PREFIX_DIR}/py-351
-    - wget https://www.python.org/ftp/python/3.5.1/Python-3.5.1.tgz
-    - tar -xf Python-3.5.1.tgz -C ${SRC_PREFIX_DIR}
-    - cd ${SRC_PREFIX_DIR}/Python-3.5.1/ ; ./configure --prefix=${INSTALL_PREFIX_DIR}/py-351
-    - cd ${SRC_PREFIX_DIR}/Python-3.5.1/ ; make
-    #- cd ${SRC_PREFIX_DIR}/Python-3.5.1/ ; make test
-    - cd ${SRC_PREFIX_DIR}/Python-3.5.1/ ; make install
+    - ./python3.5.1-install.sh
 
     #- pyenv global 3.5.1
     - which python
