--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
   environment:
     SRC_PREFIX_DIR: ${HOME}/src
     INSTALL_PREFIX_DIR: ${HOME}/opt
-    PATH: ${INSTALL_PREFIX_DIR}/py-351/bin:${PATH}
+    PATH: ${INSTALL_PREFIX_DIR}/Python-3.5.1/bin:${PATH}
 
 dependencies:
   cache_directories:
