--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,8 @@ machine:
 
 dependencies:
   cache_directories:
-    - ${INSTALL_PREFIX_DIR}
+    #- ${INSTALL_PREFIX_DIR}
+    - ~/opt
 
 test:
   pre:
