--- a/circle.yml
+++ b/circle.yml
@@ -2,13 +2,11 @@
 machine:
   pre:
     - cat /etc/*release
-
-  python:
-    version: 3.5.1
-
-dependencies:
-  pre:
-    - pyenv global 3.5.1
+    - pyenv local 3.5.1
+#
+#  python:
+#    version: 3.5.1
+#
 
 test:
   pre:
