--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,10 @@ test:
     - python2 --version
     - which python3
     - python3 --version
+    - which python3.5
+    - python3.5 --version
+    - which python3.5.1
+    - python3.5.1 --version
 
   override:
     - python3 -c 'print("OK")'
