--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@
 machine:
   pre:
     - cat /etc/*release
-#    - pyenv local 3.5.1
+    - pyenv global 2.7.11 3.5.1
 #
 #  python:
 #    version: 3.5.1
@@ -16,10 +16,6 @@ test:
     - python2 --version
     - which python3
     - python3 --version
-    - which python3.5
-    - python3.5 --version
-    - which python3.5.1
-    - python3.5.1 --version
 
   override:
     - python3 -c 'print("OK")'
