--- a/circle.yml
+++ b/circle.yml
@@ -3,19 +3,15 @@ machine:
   pre:
     - cat /etc/*release
     - pyenv global 2.7.11 3.5.1
-#
-#  python:
-#    version: 3.5.1
-#
 
-test:
+tlocalest:
   pre:
     - which python
-    - python --version
+    - v=$(python --version 2>& 1); if [ "$v" == "Python 2.7.11" ]; then echo "$v OK"; else ! echo "$v ERR"; fi
     - which python2
-    - python2 --version
+    - v=$(python2 --version 2>& 1); if [ "$v" == "Python 2.7.11" ]; then echo "$v OK"; else ! echo "$v ERR"; fi
     - which python3
-    - python3 --version
+    - v=$(python3 --version 2>& 1); if [ "$v" == "Python 3.5.1" ]; then echo "$v OK"; else ! echo "$v ERR"; fi
 
   override:
     - python3 -c 'print("OK")'
